--- a/index.html
+++ b/index.html
@@ -232,13 +232,13 @@
                         Логопеды разовьют ребенка, а репетиторы подготовят ребенка к школе, подтянут школьный предмет на
                         5+
                     </div>
-                    <a class="uk-button uk-button-primary button-tree button-one-section">Оставить заявку</a>
+                    <a href="#zajavka" class="uk-button uk-button-primary button-tree button-one-section" uk-scroll>Оставить заявку</a>
                 </div>
 
             </div>
             <div class="uk-width-expand@m uk-padding-remove">
                 <img src="images/test/Иллюстрация1.png" alt="" uk-scrollspy="cls: uk-animation-fade; delay: 600">
-                <a class="uk-button uk-button-primary button-tree button-one-mobile">Оставить заявку</a>
+                <a href="#zajavka" class="uk-button uk-button-primary button-tree button-one-mobile" uk-scroll>Оставить заявку</a>
             </div>
         </section>
 
@@ -298,9 +298,11 @@
                                     Доп.развитие</a></li>
                         </ul>
                     </div>
-                    <div class="uk-width-expand@m trend-nav-item">
-                        <ul id="component-nav" class="uk-switcher ">
+                    <div  class="uk-width-expand@m trend-nav-item">
+                        <ul id="component-nav" class="uk-switcher">
                             <li>
+
+                                <h4 class="trend-nav-item_title">Малышам</h4>
                                 <ul>
                                     <li><a href="#modal-sections" uk-toggle>Логопед</a>
                                         <div id="modal-sections" uk-modal>
@@ -333,6 +335,7 @@
                                 </ul>
                             </li>
                             <li>
+                                <h4 class="trend-nav-item_title">Дошкольникам</h4>
                                 <ul>
                                     <li><a href="#">Логопед</a></li>
                                     <li><a href="#">Дефектолог</a></li>
@@ -347,6 +350,7 @@
                                 </ul>
                             </li>
                             <li>
+                                <h4 class="trend-nav-item_title">Начальная школа</h4>
                                 <ul>
                                     <li><a href="#">Математика</a></li>
                                     <li><a href="#">Русский язык</a></li>
@@ -361,6 +365,7 @@
                                 </ul>
                             </li>
                             <li>
+                                <h4 class="trend-nav-item_title">Средняя школа</h4>
                                 <ul>
                                     <li><a href="#">Русский язык</a></li>
                                     <li><a href="#">Алгебра</a></li>
@@ -379,6 +384,7 @@
                                 </ul>
                             </li>
                             <li>
+                                <h4 class="trend-nav-item_title">Логопедия</h4>
                                 <ul>
                                     <li><a href="#">Логопед</a></li>
                                     <li><a href="#">Дефектолог</a></li>
@@ -392,6 +398,7 @@
                                 </ul>
                             </li>
                             <li>
+                                <h4 class="trend-nav-item_title">Доп развитие</h4>
                                 <ul>
                                     <li><a href="#">Логопед</a></li>
                                     <li><a href="#">Дефектолог</a></li>
@@ -698,9 +705,9 @@
                 <h3 class="" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">Как начать занятия</h3>
                 <h3 class="section-six-title-second" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 400">Оставьте
                     заявку и мы вам перезвоним</h3>
-                <button class="uk-button uk-button-primary button-tree section-six-button-second"
-                    uk-scrollspy="cls: uk-animation-slide-bottom; delay: 500">Оставить
-                    заявку</button>
+                <a href="#zajavka" class="uk-button uk-button-primary button-tree section-six-button-second"
+                    uk-scrollspy="cls: uk-animation-slide-bottom; delay: 500" uk-scroll>Оставить
+                    заявку</a>
                 <p class="section-six-text-second" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 600">
                     Педагог-куратор Вам перезвонит, обсудит все моменты, выберет удобное
                     время для первого пробного занятия</p>
@@ -842,7 +849,7 @@
                             <div class="uk-slider-container-offset"
                                 uk-slider="center: true; autoplay: true; autoplay-interval: 3000">
                                 <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1">
-                                    <ul class="uk-slider-items uk-child-width-1-3@s uk-grid-small reviews-text uk-grid-match uk-margin-large-top"
+                                    <ul class="uk-slider-items uk-child-width-1-1@s uk-child-width-1-3@m uk-grid-small reviews-text uk-grid-match uk-margin-large-top"
                                         uk-grid>
                                         <li>
                                             <div class="uk-card uk-card-default">
@@ -956,8 +963,8 @@
                 <li>Онлайн-встречи с экспертами</li>
                 <li>Видеозаписи вебинаров</li>
             </ul>
-            <a href="" class="section-block-button position-nine-button"
-                uk-scrollspy="cls: uk-animation-fade; delay: 600"></a>
+            <a href="#zajavka" class="section-block-button position-nine-button"
+                uk-scrollspy="cls: uk-animation-fade; delay: 600" uk-scroll></a>
         </section>
 
 
@@ -966,8 +973,8 @@
             <div class="uk-width-1-2@m">
                 <img class="section-ten-img" src="images/test/иллюстрация3.png" alt=""
                     uk-scrollspy="cls: uk-animation-fade; delay: 500">
-                <button class="uk-button uk-button-primary button-tree section-ten-one-button">Получить
-                    консультацию</button>
+                <a href="#zajavka" class="uk-button uk-button-primary button-tree section-ten-one-button" uk-scroll>Получить
+                    консультацию</a>
             </div>
             <div class="section-ten-second uk-width-1-2@m">
                 <h3 uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">Остались вопросы?</h3>
@@ -978,9 +985,9 @@
                     <li><span>02</span>Дождитесь нашего звонка — позвоним с 09:00 до 22:00</li>
                     <li><span>03</span>Задайте вопросы — мы ответим на них и поможем подобрать репетитора</li>
                 </ul>
-                <button class="uk-button uk-button-primary button-tree section-ten-second-button"
-                    uk-scrollspy="cls: uk-animation-slide-bottom; delay: 600">Получить
-                    консультацию</button>
+                <a href="#zajavka" class="uk-button uk-button-primary button-tree section-ten-second-button"
+                    uk-scrollspy="cls: uk-animation-slide-bottom; delay: 600" uk-scroll>Получить
+                    консультацию</a>
             </div>
         </section>
 
