--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-
+<div class="wrapper"> 
     <header uk-sticky>
 
         <section class="header container">
@@ -201,7 +201,7 @@
                         </ul>
                     </div>
                 </div>
-                </div>
+                 
             </div>
             <div>
             <a class="uk-button button-two-mobile-header uk-margin-small-right">Войти на урок</a>
@@ -1308,7 +1308,7 @@
             <a href="#" class="scrollup">Наверх</a>
     </footer>
 
-
+    </div>
 
     <script src="js/jquery.maskedinput-1.4.1.js"  type="text/javascript"></script>
 </body>
