--- a/index.html
+++ b/index.html
@@ -1306,6 +1306,7 @@
                 <div class="uk-margin-medium-top footer-content_item footer-content_item_img"><img src="images/test/Слой 72.png" alt=""></div>
             </div>
             <a href="#" class="scrollup">Наверх</a>
+        </div>
     </footer>
 
     </div>
