--- a/страница-регистрации.html
+++ b/страница-регистрации.html
@@ -124,9 +124,9 @@
                                 <input class="uk-input" name="Password" type="password" placeholder="Пароль ещё раз" required>
                             </div>
                              
-                            <div class="checkbox-tab">
+                            <!--<div class="checkbox-tab">
                                 <input class="uk-checkbox checkbox-tab-item" type="checkbox" required><span>Запомнить меня</span>
-                            </div>
+                            </div>-->
                             <h4 class="uk-text-center">Вы хотите зарегистрироваться как?</h4>
                             <ul class="uk-subnav uk-subnav-pill form-tab-1" uk-switcher="connect: .switcher-container">
                                 <li><a href="#" class="button-form-tab-1">Ученик</a></li>
