--- a/страница-входа без табов.html
+++ b/страница-входа без табов.html
@@ -127,7 +127,10 @@
                             </div>
                             <div class="uk-margin-small-bottom uk-inline uk-width-1-1">
                                 <button class="uk-button uk-width-1-1 button-sign">Войти</button>
-                            </div>    
+                            </div>   
+                            <div class="checkbox-tab">
+                                <input class="uk-checkbox checkbox-tab-item" type="checkbox" required><span>Запомнить меня</span>
+                            </div> 
                         </fieldset>
                     </form>
                 
