--- a/страница направлений.html
+++ b/страница направлений.html
@@ -241,9 +241,9 @@
 
         <main class="main container">
 
-            <h1 class="uk-text-center uk-margin-large-top contakt-title">Направления</h1>
+            <h1 class="uk-text-center uk-margin-large-top contakt-title" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">Направления</h1>
 
-            <div class="uk-flex uk-flex-center uk-margin-large-top">
+            <div class="uk-flex uk-flex-center uk-margin-large-top" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 400">
                 <p class="uk-text-center  uk-container-xsmall uk-padding">
                     Все наши преподаватели получают официальный допуск к занятиям с детьми. Допуск выдает педагогический
                     институт и предъявляется родителю, вместе с документами о повышении квалификации по направлению
