--- a/страница-входа без табов — 2.html
+++ b/страница-входа без табов — 2.html
@@ -100,10 +100,14 @@
                                     </div>
                                     <!-- Появляющийся блок   -->
                                     <ul id="notice" class="checkbox-tab notice-block">
-                                        <li id="notice-pass" class="notice-block-text"><span
+                                        <li id="notice-email-sign" class="notice-block-text"><span
                                                 uk-icon="icon: warning; ratio: 1.7"></span>
-                                            <p>Неправильно введен пароль</p>
+                                            <p>Неправильно введен e-mail, такого логина не существует</p>
                                         </li>
+                                        <li id="notice-pass-sign" class="notice-block-text"><span
+                                            uk-icon="icon: warning; ratio: 1.7"></span>
+                                        <p>Пароль не соотвествует указанному при регистрации e-mail</p>
+                                    </li>
                                     </ul>
                                     <!-- Конец появляющегося блока   -->
                                     <div class="uk-margin-small-bottom uk-inline uk-width-1-1">
