--- a/шаблон — с кнопкой выхода.html
+++ b/шаблон — с кнопкой выхода.html
@@ -87,8 +87,9 @@
                     </div>
                     <div class="uk-navbar-item header-buttons">
                         <!-- Контейнер с кнопкой входа-выхода десктоп   "entry" для входа, "exit" для выхода-->
-                        <button class="uk-button uk-button-default button-one uk-margin-small-right entry">Регистрация</button>
-                        
+                        <button
+                            class="uk-button uk-button-default button-one uk-margin-small-right entry">Регистрация</button>
+
                         <button class="uk-button uk-button-primary button-two entry">Войти на урок</button>
                         <a class="button-menu-lk-en exit" title="Личный кабинет" href=""></a>
                         <button class="uk-button uk-button-primary button-two exit">Выйти</button>
@@ -100,7 +101,8 @@
                     <div class="header container header-mobile uk-margin-small-top uk-margin-small-bottom" uk-navbar>
                         <div class="header-logo">
                             <img src="https://cdn.nyutonika.ru/svg/logo.svg">
-                        </div><!-- Контейнер с кнопкой входа-выхода плашет   "entry" для входа, "exit" для выхода-->
+                        </div>
+                        <!-- Контейнер с кнопкой входа-выхода планшет и мобилка  "entry" для входа, "exit" для выхода-->
                         <a class="uk-button button-two button-one-mobile-header uk-margin-small-right entry">Войти на
                             урок</a>
                         <a class="uk-button button-two button-one-mobile-header uk-margin-small-right exit">Выйти</a>
@@ -207,7 +209,7 @@
                         </div>
                     </div>
 
-             <a class="uk-button button-two-mobile-header uk-margin-small-right entry">Войти на урок</a>
+                    <a class="uk-button button-two-mobile-header uk-margin-small-right entry">Войти на урок</a>
 
                 </nav>
             </section>
