--- a/шаблон — с кнопкой выхода.html
+++ b/шаблон — с кнопкой выхода.html
@@ -27,7 +27,7 @@
             <section class="header container">
                 <nav class="header-desktop header-nav uk-margin-small-top" uk-navbar>
                     <div class="header-logo">
-                        <img src="https://cdn.nyutonika.ru/svg/logo.svg">
+                        <a href=""><img src="https://cdn.nyutonika.ru/svg/logo.svg"></a>
                     </div>
                     <!-- Навигация, ссылки -->
                     <ul class="uk-navbar-nav">
@@ -100,7 +100,7 @@
                 <nav class="">
                     <div class="header container header-mobile uk-margin-small-top uk-margin-small-bottom" uk-navbar>
                         <div class="header-logo">
-                            <img src="https://cdn.nyutonika.ru/svg/logo.svg">
+                            <a href=""><img src="https://cdn.nyutonika.ru/svg/logo.svg"></a>
                         </div>
                         <!-- Контейнер с кнопкой входа-выхода планшет и мобилка  "entry" для входа, "exit" для выхода-->
                         <a class="uk-button button-two button-one-mobile-header uk-margin-small-right entry">Войти на
@@ -222,7 +222,7 @@
         <footer class="footer">
             <div class="container">
                 <div class="footer-logo">
-                    <img src="https://cdn.nyutonika.ru/svg/logo.svg">
+                    <a href=""><img src="https://cdn.nyutonika.ru/svg/logo.svg"></a>
                 </div>
                 <div class="footer-content">
                     <div class="footer-content_item">
