--- a/шаблон — страница направления-логопед.html
+++ b/шаблон — страница направления-логопед.html
@@ -254,19 +254,19 @@
                         <div class="banner-trend-text" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 400">
                             Оставьте заявку на бесплатный урок!</div>
                         <form action="" class="uk-grid-small banner-trend-form" uk-grid>
-                            <div class="uk-width-1-4@m uk-inline">
+                            <div class="uk-width-1-3@m uk-width-1-4@l uk-inline">
                                 <span class="uk-form-icon uk-icon" uk-icon="icon: user; ratio: 1.7"></span><input
                                     class="uk-input" type="text" placeholder="Ваше имя">
                             </div>
-                            <div class="uk-width-1-4@m uk-inline">
+                            <div class="uk-width-1-3@m uk-width-1-4@l uk-inline">
                                 <span class="uk-form-icon uk-icon" uk-icon="icon: receiver; ratio: 1.7"></span><input
                                     class="uk-input phone" type="tel" placeholder="Телефон">
                             </div>
-                            <div class="uk-width-1-4@m uk-inline">
+                            <div class="uk-width-1-3@m uk-width-1-4@l uk-inline">
                                 <span class="uk-form-icon uk-icon" uk-icon="icon: mail; ratio: 1.7"></span><input
                                     class="uk-input" type="email" placeholder="E-mail">
                             </div>
-                            <div class="uk-width-1-4@m uk-inline">
+                            <div class="uk-width-1-1@m uk-width-1-4@l uk-inline">
                                 <button type="submit" class="uk-button uk-button-default uk-width-1-1">Оставить
                                     заявку</button>
                             </div>
@@ -546,19 +546,19 @@
                         </div>
 
                         <form action="" class="uk-grid-small banner-trend-form" uk-grid>
-                            <div class="uk-width-1-4@m uk-inline">
+                            <div class="uk-width-1-3@m uk-width-1-4@l uk-inline">
                                 <span class="uk-form-icon uk-icon" uk-icon="icon: user; ratio: 1.7"></span><input
                                     class="uk-input" type="text" placeholder="Ваше имя">
                             </div>
-                            <div class="uk-width-1-4@m uk-inline">
+                            <div class="uk-width-1-3@m uk-width-1-4@l uk-inline">
                                 <span class="uk-form-icon uk-icon" uk-icon="icon: receiver; ratio: 1.7"></span><input
                                     class="uk-input phone" type="tel" placeholder="Телефон">
                             </div>
-                            <div class="uk-width-1-4@m uk-inline">
+                            <div class="uk-width-1-3@m uk-width-1-4@l uk-inline">
                                 <span class="uk-form-icon uk-icon" uk-icon="icon: mail; ratio: 1.7"></span><input
                                     class="uk-input" type="email" placeholder="E-mail">
                             </div>
-                            <div class="uk-width-1-4@m uk-inline">
+                            <div class="uk-width-1-1@m uk-width-1-4@l uk-inline">
                                 <button type="submit" class="uk-button uk-button-default uk-width-1-1">Оставить
                                     заявку</button>
                             </div>
