--- a/шаблон — страница направления-логопед.html
+++ b/шаблон — страница направления-логопед.html
@@ -512,7 +512,7 @@
 
                                 </ul>
                             </div>
-                            <div class="uk-flex-center uk-flex">
+                            <div class="uk-flex-center uk-flex problems-img">
                                 <img class="" uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
                                     src="https://cdn.nyutonika.ru/images/логопед-блок-проблемы.png" alt="">
                             </div>
