--- a/шаблон — страница направления-логопед.html
+++ b/шаблон — страница направления-логопед.html
@@ -672,7 +672,7 @@
                                 </span>
                             </li>
                         </ol>
-                        <div class="banner-trend-dop" uk-grid tabindex="0">
+                        <div class="banner-trend-dop lessons-list-dop" uk-grid tabindex="0">
                             <img class="lessons-list-img" src="https://cdn.nyutonika.ru/images/экран.png" alt="">
                             <img class="lessons-list-img2" src="https://cdn.nyutonika.ru/images/экран2.png" alt="">
                         </div>
