--- a/шаблон — страница направления-логопед — малышам.html
+++ b/шаблон — страница направления-логопед — малышам.html
@@ -220,18 +220,16 @@
             <!--Блок главный баннер с формой-->
 
             <div class="banner-trend-dop" uk-grid tabindex="0">
-                <img class="banner-trend-dop_img-logoped"
+                <img class="banner-trend-dop_img-malisham"
                     uk-scrollspy="cls: uk-animation-fade; delay: 400; repeat: false"
-                    src="https://cdn.nyutonika.ru/images/логопед-баннер-девушка.png" alt="">
-                <img class="banner-trend-dop_img-logoped-aplle1"
+                    src="https://cdn.nyutonika.ru/images/Малышам-баннер31.png" alt="">
+                <img class="banner-trend-dop_img-malisham-aplle1"
                     uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                    src="https://cdn.nyutonika.ru/svg/Яблоко1-логопед.svg" alt="">
+                    src="https://cdn.nyutonika.ru/svg/Яблоко1-малышам.svg" alt="">
                 <img class="banner-trend-dop_img-logoped-aplle2"
                     uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
                     src="https://cdn.nyutonika.ru/svg/Яблоко2-логопед.svg" alt="">
-                <img class="banner-trend-dop_img-logoped-circle"
-                    uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                    src="https://cdn.nyutonika.ru/svg/Круг-зеленыйлогопед.svg" alt="">
+                
                 <img class="banner-trend-dop_img-logoped-icon1"
                     uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
                     src="https://cdn.nyutonika.ru/icons/иконка1-логопед.svg" alt="">
@@ -241,32 +239,30 @@
             </div>
 
 
-            <div class="banner-trend banner-trend_logoped">
+            <div class="banner-trend banner-trend_malisham">
 
                 <div class="container">
                     <section class="container-item">
 
                         <h1 class="banner-trend-title" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">
-                            Онлайн-логопед для коррекции речи
-                            у детей </h1>
-
+                            Онлайн-занятия с малышами</h1>
                         <div></div>
                         <div class="banner-trend-text" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 400">
                             Оставьте заявку на бесплатный урок!</div>
                         <form action="" class="uk-grid-small banner-trend-form" uk-grid>
-                            <div class="uk-width-1-4@m uk-inline">
+                            <div class="uk-width-1-3@m uk-width-1-4@l uk-inline">
                                 <span class="uk-form-icon uk-icon" uk-icon="icon: user; ratio: 1.7"></span><input
                                     class="uk-input" type="text" placeholder="Ваше имя">
                             </div>
-                            <div class="uk-width-1-4@m uk-inline">
+                            <div class="uk-width-1-3@m uk-width-1-4@l uk-inline">
                                 <span class="uk-form-icon uk-icon" uk-icon="icon: receiver; ratio: 1.7"></span><input
                                     class="uk-input phone" type="tel" placeholder="Телефон">
                             </div>
-                            <div class="uk-width-1-4@m uk-inline">
+                            <div class="uk-width-1-3@m uk-width-1-4@l uk-inline">
                                 <span class="uk-form-icon uk-icon" uk-icon="icon: mail; ratio: 1.7"></span><input
                                     class="uk-input" type="email" placeholder="E-mail">
                             </div>
-                            <div class="uk-width-1-4@m uk-inline">
+                            <div class="uk-width-1-1@m uk-width-1-4@l uk-inline">
                                 <button type="submit" class="uk-button uk-button-default uk-width-1-1">Оставить
                                     заявку</button>
                             </div>
@@ -284,7 +280,7 @@
             <div class="benefits-block">
 
                 <section class="container-item">
-                    <div class="benefits benefits-logoped">
+                    <div class="benefits benefits-malisham">
                         <div class="benefits__inner">
 
                             <div class="benefits__element">
@@ -312,7 +308,7 @@
             <div class="">
                 <div class="container">
                     <section class="container-item">
-                        <div class="efficiency">
+                        <div class="efficiency efficiency-malisham">
                             <h3 class="title-trend-block">Онлайн-занятия – это эффективно</h3>
                             <p>Доверьтесь онлайн-логопеду, и сэкономьте время и деньги</p>
                             <div class="uk-grid-medium uk-child-width-1-4 uk-grid-match" uk-grid>
@@ -363,7 +359,7 @@
                         </div>
                     </section>
                     <section class="two-section-dop">
-                        <img class="two-section-img-efficiency" src="https://cdn.nyutonika.ru/images/зеленый-шейп1.png"
+                        <img class="two-section-img-efficiency-podgotovka" src="https://cdn.nyutonika.ru/svg/зеленый-шейп3.svg"
                             alt="">
                     </section>
                 </div>
@@ -392,7 +388,7 @@
                                         <li>
                                             <div class="uk-card uk-card-default ">
                                                 <div class="uk-card-media-top">
-                                                    <img src="https://cdn.nyutonika.ru/images/test/учитель-3.png"
+                                                    <img src="https://cdn.nyutonika.ru/images/test/учитель-2.png"
                                                         alt="Слайдер" loading="lazy">
                                                 </div>
                                                 <div class="uk-card-body card-teacher-content">
@@ -410,26 +406,7 @@
                                         <li>
                                             <div class="uk-card uk-card-default">
                                                 <div class="uk-card-media-top">
-                                                    <img src="https://cdn.nyutonika.ru/images/test/учитель-3.png"
-                                                        alt="Слайдер" loading="lazy">
-                                                </div>
-                                                <div class="uk-card-body card-teacher-content">
-                                                    <div class="uk-card-badge uk-label teacher-label-color-tree">Значок
-                                                    </div>
-                                                    <h4 class="uk-card-title card-teacher-title">Елена Иванова</h4>
-                                                    <p class="card-teacher-experience">Стаж - 7 лет</p>
-                                                    <p class="card-teacher-description">Строго говоря, ничто не мешает
-                                                        нам
-                                                        вообразить себе, что в каком-нибудь одном индивиде.</p>
-                                                </div>
-                                            </div>
-                                        </li>
-
-
-                                        <li>
-                                            <div class="uk-card uk-card-default">
-                                                <div class="uk-card-media-top">
-                                                    <img src="https://cdn.nyutonika.ru/images/test/учитель-3.png"
+                                                    <img src="https://cdn.nyutonika.ru/images/test/учитель-2.png"
                                                         alt="Слайдер" loading="lazy">
                                                 </div>
                                                 <div class="uk-card-body card-teacher-content">
@@ -448,7 +425,26 @@
                                         <li>
                                             <div class="uk-card uk-card-default">
                                                 <div class="uk-card-media-top">
-                                                    <img src="https://cdn.nyutonika.ru/images/test/учитель-3.png"
+                                                    <img src="https://cdn.nyutonika.ru/images/test/учитель-2.png"
+                                                        alt="Слайдер" loading="lazy">
+                                                </div>
+                                                <div class="uk-card-body card-teacher-content">
+                                                    <div class="uk-card-badge uk-label teacher-label-color-tree">Значок
+                                                    </div>
+                                                    <h4 class="uk-card-title card-teacher-title">Елена Иванова</h4>
+                                                    <p class="card-teacher-experience">Стаж - 7 лет</p>
+                                                    <p class="card-teacher-description">Строго говоря, ничто не мешает
+                                                        нам
+                                                        вообразить себе, что в каком-нибудь одном индивиде.</p>
+                                                </div>
+                                            </div>
+                                        </li>
+
+
+                                        <li>
+                                            <div class="uk-card uk-card-default">
+                                                <div class="uk-card-media-top">
+                                                    <img src="https://cdn.nyutonika.ru/images/test/учитель-2.png"
                                                         alt="Слайдер" loading="lazy">
                                                 </div>
                                                 <div class="uk-card-body card-teacher-content">
@@ -486,7 +482,7 @@
                 </div>
             </div>
 
-            <div class="problems">
+            <div class="problems problems_malisham">
                 <div class="">
                     <section class="container-item">
                         <h4 class="uk-text-center title-trend-block"
@@ -495,7 +491,7 @@
                             проблемы мы решаем</p>
                         <div class="uk-child-width-1-2@l uk-flex-center@l uk-flex-middle uk-flex-center uk-flex-wrap-reverse"
                             uk-grid>
-                            <div class="efficiency">
+                            <div class="efficiency efficiency-malisham">
                                 <ul>
                                     <li>Ребёнок не выговаривает звуки
                                         <ul>
@@ -512,9 +508,9 @@
 
                                 </ul>
                             </div>
-                            <div class="uk-flex-center uk-flex">
+                            <div class="uk-flex-center uk-flex problems-img">
                                 <img class="" uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                                    src="https://cdn.nyutonika.ru/images/логопед-блок-проблемы.png" alt="">
+                                    src="https://cdn.nyutonika.ru/images/Малышам-направления.png" alt="">
                             </div>
                         </div>
                     </section>
@@ -546,19 +542,19 @@
                         </div>
 
                         <form action="" class="uk-grid-small banner-trend-form" uk-grid>
-                            <div class="uk-width-1-4@m uk-inline">
+                            <div class="uk-width-1-3@m uk-width-1-4@l uk-inline">
                                 <span class="uk-form-icon uk-icon" uk-icon="icon: user; ratio: 1.7"></span><input
                                     class="uk-input" type="text" placeholder="Ваше имя">
                             </div>
-                            <div class="uk-width-1-4@m uk-inline">
+                            <div class="uk-width-1-3@m uk-width-1-4@l uk-inline">
                                 <span class="uk-form-icon uk-icon" uk-icon="icon: receiver; ratio: 1.7"></span><input
                                     class="uk-input phone" type="tel" placeholder="Телефон">
                             </div>
-                            <div class="uk-width-1-4@m uk-inline">
+                            <div class="uk-width-1-3@m uk-width-1-4@l uk-inline">
                                 <span class="uk-form-icon uk-icon" uk-icon="icon: mail; ratio: 1.7"></span><input
                                     class="uk-input" type="email" placeholder="E-mail">
                             </div>
-                            <div class="uk-width-1-4@m uk-inline">
+                            <div class="uk-width-1-1@m uk-width-1-4@l uk-inline">
                                 <button type="submit" class="uk-button uk-button-default uk-width-1-1">Оставить
                                     заявку</button>
                             </div>
@@ -672,7 +668,7 @@
                                 </span>
                             </li>
                         </ol>
-                        <div class="banner-trend-dop" uk-grid tabindex="0">
+                        <div class="banner-trend-dop lessons-list-dop" uk-grid tabindex="0">
                             <img class="lessons-list-img" src="https://cdn.nyutonika.ru/images/экран.png" alt="">
                             <img class="lessons-list-img2" src="https://cdn.nyutonika.ru/images/экран2.png" alt="">
                         </div>
