--- a/шаблон — страница направления-логопед — доп-развитие.html
+++ b/шаблон — страница направления-логопед — доп-развитие.html
@@ -241,7 +241,7 @@
             </div>
 
 
-            <div class="banner-trend banner-trend_logoped">
+            <div class="banner-trend banner-trend_doprazvitie">
 
                 <div class="container">
                     <section class="container-item">
@@ -254,19 +254,19 @@
                         <div class="banner-trend-text" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 400">
                             Оставьте заявку на бесплатный урок!</div>
                         <form action="" class="uk-grid-small banner-trend-form" uk-grid>
-                            <div class="uk-width-1-4@m uk-inline">
+                            <div class="uk-width-1-3@m uk-width-1-4@l uk-inline">
                                 <span class="uk-form-icon uk-icon" uk-icon="icon: user; ratio: 1.7"></span><input
                                     class="uk-input" type="text" placeholder="Ваше имя">
                             </div>
-                            <div class="uk-width-1-4@m uk-inline">
+                            <div class="uk-width-1-3@m uk-width-1-4@l uk-inline">
                                 <span class="uk-form-icon uk-icon" uk-icon="icon: receiver; ratio: 1.7"></span><input
                                     class="uk-input phone" type="tel" placeholder="Телефон">
                             </div>
-                            <div class="uk-width-1-4@m uk-inline">
+                            <div class="uk-width-1-3@m uk-width-1-4@l uk-inline">
                                 <span class="uk-form-icon uk-icon" uk-icon="icon: mail; ratio: 1.7"></span><input
                                     class="uk-input" type="email" placeholder="E-mail">
                             </div>
-                            <div class="uk-width-1-4@m uk-inline">
+                            <div class="uk-width-1-1@m uk-width-1-4@l uk-inline">
                                 <button type="submit" class="uk-button uk-button-default uk-width-1-1">Оставить
                                     заявку</button>
                             </div>
@@ -512,7 +512,7 @@
 
                                 </ul>
                             </div>
-                            <div class="uk-flex-center uk-flex">
+                            <div class="uk-flex-center uk-flex problems-img">
                                 <img class="" uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
                                     src="https://cdn.nyutonika.ru/images/логопед-блок-проблемы.png" alt="">
                             </div>
@@ -546,19 +546,19 @@
                         </div>
 
                         <form action="" class="uk-grid-small banner-trend-form" uk-grid>
-                            <div class="uk-width-1-4@m uk-inline">
+                            <div class="uk-width-1-3@m uk-width-1-4@l uk-inline">
                                 <span class="uk-form-icon uk-icon" uk-icon="icon: user; ratio: 1.7"></span><input
                                     class="uk-input" type="text" placeholder="Ваше имя">
                             </div>
-                            <div class="uk-width-1-4@m uk-inline">
+                            <div class="uk-width-1-3@m uk-width-1-4@l uk-inline">
                                 <span class="uk-form-icon uk-icon" uk-icon="icon: receiver; ratio: 1.7"></span><input
                                     class="uk-input phone" type="tel" placeholder="Телефон">
                             </div>
-                            <div class="uk-width-1-4@m uk-inline">
+                            <div class="uk-width-1-3@m uk-width-1-4@l uk-inline">
                                 <span class="uk-form-icon uk-icon" uk-icon="icon: mail; ratio: 1.7"></span><input
                                     class="uk-input" type="email" placeholder="E-mail">
                             </div>
-                            <div class="uk-width-1-4@m uk-inline">
+                            <div class="uk-width-1-1@m uk-width-1-4@l uk-inline">
                                 <button type="submit" class="uk-button uk-button-default uk-width-1-1">Оставить
                                     заявку</button>
                             </div>
@@ -672,7 +672,7 @@
                                 </span>
                             </li>
                         </ol>
-                        <div class="banner-trend-dop" uk-grid tabindex="0">
+                        <div class="banner-trend-dop lessons-list-dop" uk-grid tabindex="0">
                             <img class="lessons-list-img" src="https://cdn.nyutonika.ru/images/экран.png" alt="">
                             <img class="lessons-list-img2" src="https://cdn.nyutonika.ru/images/экран2.png" alt="">
                         </div>
