--- a/шаблон — страница направления-логопед — начальная-школа.html
+++ b/шаблон — страница направления-логопед — начальная-школа.html
@@ -223,21 +223,16 @@
                 <img class="banner-trend-dop_img-nachscola"
                     uk-scrollspy="cls: uk-animation-fade; delay: 400; repeat: false"
                     src="https://cdn.nyutonika.ru/images/happy-child-with-backpack-and-stack-of-books2.png" alt="">
-                <img class="banner-trend-dop_img-logoped-aplle1"
+                <img class="banner-trend-dop_img-nachscola-aplle1"
                     uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                    src="https://cdn.nyutonika.ru/svg/шейп-яблоко1-начшкола.svg" alt="">
-                <img class="banner-trend-dop_img-logoped-aplle2"
+                    src="https://cdn.nyutonika.ru/svg/шейп1-яблоко1-начшкола.svg" alt="">
+                <img class="banner-trend-dop_img-nachscola-aplle2"
                     uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
                     src="https://cdn.nyutonika.ru/svg/шейп-яблоко2-начшкола.svg" alt="">
-                <img class="banner-trend-dop_img-logoped-circle"
+                <img class="banner-trend-dop_img-nachscola-circle"
                     uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
                     src="https://cdn.nyutonika.ru/svg/желтый-круг-нач-школа.svg" alt="">
-                <img class="banner-trend-dop_img-logoped-icon1"
-                    uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                    src="https://cdn.nyutonika.ru/svg/рис1-начшкола.svg" alt="">
-                <img class="banner-trend-dop_img-logoped-icon2"
-                    uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                    src="https://cdn.nyutonika.ru/svg/рис2-начшкола.svg" alt="">
+                
             </div>
 
 
@@ -650,7 +645,8 @@
                             <img class="lessons-list-img2" src="https://cdn.nyutonika.ru/images/экран2.png" alt="">
                         </div>
                         <div class="banner-trend-dop" uk-grid tabindex="0">
-                            <img class="banner-trend-dop_img-logoped-aplle4" src="https://cdn.nyutonika.ru/svg/Яблоко-4-логопед.svg" alt="">
+                            <img class="banner-trend-dop_img-nachsc-aplle2" src="https://cdn.nyutonika.ru/svg/уроки круги.svg" alt="">
+                            <img class="banner-trend-dop_img-nachsc-aplle3" src="https://cdn.nyutonika.ru/svg/Яблоко-желтое-уроки-начшкола.svg" alt="">
                         </div>
                     </section>
                 </div>
