--- a/шаблон — страница направления-подготовка-к-школе.html
+++ b/шаблон — страница направления-подготовка-к-школе.html
@@ -657,12 +657,12 @@
                                 </span>
                             </li>
                         </ol>
-                        <div class="banner-trend-dop lessons-list-dop" uk-grid tabindex="0">
-                            <img class="lessons-list-img" src="https://cdn.nyutonika.ru/images/экран.png" alt="">
-                            <img class="lessons-list-img2" src="https://cdn.nyutonika.ru/images/экран2.png" alt="">
+                        <div class="banner-trend-dop lessons-list-dop lessons-list-dop2" uk-grid tabindex="0">
+                            <img class="lessons-list-img3" src="https://cdn.nyutonika.ru/images/экран3.png" alt="">
+                            <img class="lessons-list-img4" src="https://cdn.nyutonika.ru/images/экран2.png" alt="">
                         </div>
                         <div class="banner-trend-dop" uk-grid tabindex="0">
-                            <img class="banner-trend-dop_img-logoped-aplle4" src="https://cdn.nyutonika.ru/svg/Яблоко-4-логопед.svg" alt="">
+                            <img class="banner-trend-dop_img-podgotovka-aplle3" src="https://cdn.nyutonika.ru/svg/Яблоко-желтое-уроки-подготовка-кшколе.svg" alt="">
                         </div>
                     </section>
                 </div>
