--- a/шаблон — страница направления-логопед — доп-развитие.html
+++ b/шаблон — страница направления-логопед — доп-развитие.html
@@ -220,24 +220,24 @@
             <!--Блок главный баннер с формой-->
 
             <div class="banner-trend-dop" uk-grid tabindex="0">
-                <img class="banner-trend-dop_img-logoped"
+                <img class="banner-trend-dop_img-doprazvitie"
                     uk-scrollspy="cls: uk-animation-fade; delay: 400; repeat: false"
                     src="https://cdn.nyutonika.ru/images/the-beautiful-little-girl-with-hands-in-the-paint 1.png" alt="">
-                <img class="banner-trend-dop_img-logoped-aplle1"
+                <img class="banner-trend-dop_img-doprazvitie-aplle1"
                     uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                    src="https://cdn.nyutonika.ru/svg/Яблоко1-логопед.svg" alt="">
-                <img class="banner-trend-dop_img-logoped-aplle2"
+                    src="https://cdn.nyutonika.ru/svg/яблоко1-допразв.svg" alt="">
+                <img class="banner-trend-dop_img-doprazvitie-aplle2"
                     uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                    src="https://cdn.nyutonika.ru/svg/Яблоко2-логопед.svg" alt="">
-                <img class="banner-trend-dop_img-logoped-circle"
+                    src="https://cdn.nyutonika.ru/svg/яблоко2-допразв.svg" alt="">
+                <img class="banner-trend-dop_img-doprazvitie-circle"
                     uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
                     src="https://cdn.nyutonika.ru/svg/желтыйкругдопразвитие.svg" alt="">
-                <img class="banner-trend-dop_img-logoped-icon1"
+                <img class="banner-trend-dop_img-doprazvitie-icon1"
                     uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                    src="https://cdn.nyutonika.ru/icons/иконка1-логопед.svg" alt="">
-                <img class="banner-trend-dop_img-logoped-icon2"
+                    src="https://cdn.nyutonika.ru/svg/рис1-доп.svg" alt="">
+                <img class="banner-trend-dop_img-doprazvitie-icon2"
                     uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                    src="https://cdn.nyutonika.ru/icons/icon2-logoped.svg" alt="">
+                    src="https://cdn.nyutonika.ru/svg/рис2-доп.svg" alt="">
             </div>
 
 
@@ -247,8 +247,8 @@
                     <section class="container-item">
 
                         <h1 class="banner-trend-title" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">
-                            Онлайн-логопед для коррекции речи
-                            у детей </h1>
+                            Онлайн-занятия <br>
+Развивайся вместе с нами! </h1>
 
                         <div></div>
                         <div class="banner-trend-text" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 400">
@@ -669,8 +669,9 @@
                             <img class="lessons-list-img" src="https://cdn.nyutonika.ru/images/экран.png" alt="">
                             <img class="lessons-list-img2" src="https://cdn.nyutonika.ru/images/экран2.png" alt="">
                         </div>
-                        <div class="banner-trend-dop" uk-grid tabindex="0">
-                            <img class="banner-trend-dop_img-logoped-aplle4" src="https://cdn.nyutonika.ru/svg/Яблоко-4-логопед.svg" alt="">
+                        <div class="banner-trend-dop uk-grid" uk-grid="" tabindex="0">
+                            <img class="banner-trend-dop_img-nachsc-aplle2" src="https://cdn.nyutonika.ru/svg/уроки круги.svg" alt="">
+                            <img class="banner-trend-dop_img-nachsc-aplle3 uk-first-column" src="https://cdn.nyutonika.ru/svg/яблоко-допразв-занятия1.svg" alt="">
                         </div>
                     </section>
                 </div>
