--- a/шаблон — страница направления-логопед — малышам.html
+++ b/шаблон — страница направления-логопед — малышам.html
@@ -226,16 +226,14 @@
                 <img class="banner-trend-dop_img-malisham-aplle1"
                     uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
                     src="https://cdn.nyutonika.ru/svg/Яблоко1-малышам.svg" alt="">
-                <img class="banner-trend-dop_img-logoped-aplle2"
+                <img class="banner-trend-dop_img-malisham-aplle2"
                     uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                    src="https://cdn.nyutonika.ru/svg/Яблоко2-логопед.svg" alt="">
+                    src="https://cdn.nyutonika.ru/svg/Яблоко2-малышам.svg" alt="">
                 
-                <img class="banner-trend-dop_img-logoped-icon1"
+                <img class="banner-trend-dop_img-malisham-ris1 "
                     uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                    src="https://cdn.nyutonika.ru/icons/иконка1-логопед.svg" alt="">
-                <img class="banner-trend-dop_img-logoped-icon2"
-                    uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
-                    src="https://cdn.nyutonika.ru/icons/icon2-logoped.svg" alt="">
+                    src="https://cdn.nyutonika.ru/svg/рис1-малышам.svg" alt="">
+                
             </div>
 
 
@@ -664,7 +662,8 @@
                             <img class="lessons-list-img2" src="https://cdn.nyutonika.ru/images/экран2.png" alt="">
                         </div>
                         <div class="banner-trend-dop" uk-grid tabindex="0">
-                            <img class="banner-trend-dop_img-logoped-aplle4" src="https://cdn.nyutonika.ru/svg/Яблоко-4-логопед.svg" alt="">
+                            <img class="banner-trend-dop_img-nachsc-aplle2" src="https://cdn.nyutonika.ru/svg/уроки круги.svg" alt="">
+                            <img class="banner-trend-dop_img-nachsc-aplle3" src="https://cdn.nyutonika.ru/svg/яблоко-малышам-занятия1.svg" alt="">
                         </div>
                     </section>
                 </div>
