--- a/шаблон — страница направления-логопед — средняя-школа.html
+++ b/шаблон — страница направления-логопед — средняя-школа.html
@@ -220,19 +220,19 @@
             <!--Блок главный баннер с формой-->
 
             <div class="banner-trend-dop" uk-grid tabindex="0">
-                <img class="banner-trend-dop_img-logoped"
+                <img class="banner-trend-dop_img-srscola"
                     uk-scrollspy="cls: uk-animation-fade; delay: 400; repeat: false"
                     src="https://cdn.nyutonika.ru/images/Средняя-школа-баннер.png" alt="">
-                <img class="banner-trend-dop_img-logoped-aplle1"
+                <img class="banner-trend-dop_img-srscola-aplle1"
                     uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
                     src="https://cdn.nyutonika.ru/svg/яблоко1-сршк.svg" alt="">
-                <img class="banner-trend-dop_img-logoped-aplle2"
+                <img class="banner-trend-dop_img-srscola-aplle2"
                     uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
                     src="https://cdn.nyutonika.ru/svg/яблоко2-сршк.svg" alt="">
-                <img class="banner-trend-dop_img-logoped-circle"
+                <img class="banner-trend-dop_img-srscola-circle"
                     uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
                     src="https://cdn.nyutonika.ru/svg/кругголубой-средшкола.svg" alt="">
-                <img class="banner-trend-dop_img-logoped-icon1"
+                <img class="banner-trend-dop_img-srscola-icon1"
                     uk-scrollspy="cls: uk-animation-fade; delay: 500; repeat: false"
                     src="https://cdn.nyutonika.ru/svg/карандаш-сршк.svg" alt="">
                  
@@ -245,8 +245,7 @@
                     <section class="container-item">
 
                         <h1 class="banner-trend-title" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 300">
-                            Онлайн-логопед для коррекции речи
-                            у детей </h1>
+                            Онлайн-занятия с репетитором для школьников 10-15 лет</h1>
 
                         <div></div>
                         <div class="banner-trend-text" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 400">
@@ -675,8 +674,9 @@
                             <img class="lessons-list-img" src="https://cdn.nyutonika.ru/images/экран.png" alt="">
                             <img class="lessons-list-img2" src="https://cdn.nyutonika.ru/images/экран2.png" alt="">
                         </div>
-                        <div class="banner-trend-dop" uk-grid tabindex="0">
-                            <img class="banner-trend-dop_img-logoped-aplle4" src="https://cdn.nyutonika.ru/svg/Яблоко-4-логопед.svg" alt="">
+                        <div class="banner-trend-dop uk-grid" uk-grid="" tabindex="0">
+                            <img class="banner-trend-dop_img-nachsc-aplle2" src="https://cdn.nyutonika.ru/svg/уроки круги.svg" alt="">
+                            <img class="banner-trend-dop_img-nachsc-aplle3 uk-first-column" src="https://cdn.nyutonika.ru/svg/яблоко-сршк-занятия1.svg" alt="">
                         </div>
                     </section>
                 </div>
