--- a/шаблон — с формой и модальным окном.html
+++ b/шаблон — с формой и модальным окном.html
@@ -273,6 +273,8 @@
                                     бесплатно</button>
                                 <a  class="uk-button uk-button-default button-two" href="#req_success"
                                     uk-toggle>Модальное окно</a>
+                                    <a  class="uk-button uk-button-default button-two" href="#"
+                                    uk-toggle="target: #req_success">Модальное окно2</a>
                             </div>
                             <div class="uk-form-controls">Отправляя форму, вы соглашаетесь с <a href="">офертой</a> и
                                 даёте
