--- a/шаблон — с формой и модальным окном.html
+++ b/шаблон — с формой и модальным окном.html
@@ -271,10 +271,12 @@
                             <div class="uk-margin-bottom uk-text-center">
                                 <button type="submit" class="uk-button uk-button-default button-two">Начать
                                     бесплатно</button>
+                                    
                                 <a  class="uk-button uk-button-default button-two" href="#req_success"
                                     uk-toggle>Модальное окно</a>
-                                    <a  class="uk-button uk-button-default button-two" href="#"
-                                    uk-toggle="target: #req_success">Модальное окно2</a>
+                                    <button  type="submit" class="uk-button uk-button-default button-two" href="#"
+                                    uk-toggle="target: #req_success">Модальное окно2</button>
+                                    
                             </div>
                             <div class="uk-form-controls">Отправляя форму, вы соглашаетесь с <a href="">офертой</a> и
                                 даёте
