--- a/шаблон — личный кабинет — личный кабинет общая страница.html
+++ b/шаблон — личный кабинет — личный кабинет общая страница.html
@@ -36,7 +36,7 @@
         </div>
         <ul class="menu-lk">
             <li>
-                <a href="https://olgabindasova.github.io/nytonika/шаблон%20—%20личный%20кабинет%20общая%20страница.html">
+                <a href="https://olgabindasova.github.io/nytonika/шаблон%20—%20личный%20кабинет%20—%20личный%20кабинет%20общая%20страница.html">
                     <img class="" src="https://cdn.nyutonika.ru/icons-lk/lk-akk.svg"><span>Личный кабинет</span>
                 </a>
             </li>
@@ -102,7 +102,7 @@
                     <p class="header-top-lk_profile_name">Иванов Иван Иванович</p>
                 </div>
                
-                   <a class="header-top-lk_profile_icon uk-margin-small-left" href="https://olgabindasova.github.io/nytonika/шаблон%20—%20личный%20кабинет%20общая%20страница.html"><span uk-icon="icon: user; ratio: 1.5"></span></a> 
+                   <a class="header-top-lk_profile_icon uk-margin-small-left" href="https://olgabindasova.github.io/nytonika/шаблон%20—%20личный%20кабинет%20—%20личный%20кабинет%20общая%20страница.html"><span uk-icon="icon: user; ratio: 1.5"></span></a> 
                 
             </div>
         </div>
