--- a/шаблон — личный кабинет.html
+++ b/шаблон — личный кабинет.html
@@ -52,7 +52,7 @@
             </li>
             <li>
                 <a href="">
-                    <img class="https://olgabindasova.github.io/nytonika/шаблон%20—%20личный%20кабинет%20—%20история%20занятий.html" src="https://cdn.nyutonika.ru/icons-lk/order-history-lk.svg"><span>История занятий</span>
+                    <img class="https://olgabindasova.github.io/nytonika/шаблон%20—%20личный%20кабинет%20—%20история%20занятий.html"><span>История занятий</span>
                 </a>
             </li>
             <li>
