--- a/шаблон — личный кабинет — пакеты занятий.html
+++ b/шаблон — личный кабинет — пакеты занятий.html
@@ -52,7 +52,7 @@
             </li>
             <li>
                 <a href="https://olgabindasova.github.io/nytonika/шаблон%20—%20личный%20кабинет%20—%20история%20занятий.html">
-                    <img class="" src="https://cdn.nyutonika.ru/icons-lk/order-history-lk.svg"><span>История занятий</span>
+                    <img class="" src="https://cdn.nyutonika.ru/icons-lk/order-history-lk.svg"><span>История заказов</span>
                 </a>
             </li>
             <li>
