--- a/шаблон — личный кабинет — ближайшие занятия.html
+++ b/шаблон — личный кабинет — ближайшие занятия.html
@@ -119,7 +119,9 @@
                     <p><span>Предмет:</span>Русский язык</p>
                 </div>
                 <div class="card-lk_button">
-                    <button type="submit">На занятие</button>
+                    <button type="submit">
+                        <a href="" target="_blank">На занятие</a>
+                        </button>
                 </div>
              </div>
          </li>
@@ -132,7 +134,9 @@
                    <p><span>Предмет:</span>Русский язык</p>
                </div>
                <div class="card-lk_button">
-                   <button type="submit">На занятие</button>
+                <button type="submit">
+                    <a href="" target="_blank">На занятие</a>
+                    </button>
                </div>
             </div>
          </li>
@@ -145,7 +149,9 @@
                    <p><span>Предмет:</span>Русский язык</p>
                </div>
                <div class="card-lk_button">
-                   <button type="submit">На занятие</button>
+                <button type="submit">
+                    <a href="" target="_blank">На занятие</a>
+                    </button>
                </div>
             </div>
          </li>
@@ -158,7 +164,9 @@
                    <p><span>Предмет:</span>Русский язык</p>
                </div>
                <div class="card-lk_button">
-                   <button type="submit">На занятие</button>
+                <button type="submit">
+                    <a href="" target="_blank">На занятие</a>
+                    </button>
                </div>
             </div>
          </li>
@@ -171,7 +179,9 @@
                    <p><span>Предмет:</span>Русский язык</p>
                </div>
                <div class="card-lk_button">
-                   <button type="submit">На занятие</button>
+                <button type="submit">
+                    <a href="" target="_blank">На занятие</a>
+                    </button>
                </div>
             </div>
          </li>
@@ -184,7 +194,9 @@
                    <p><span>Предмет:</span>Русский язык</p>
                </div>
                <div class="card-lk_button">
-                   <button type="submit">На занятие</button>
+                <button type="submit">
+                    <a href="" target="_blank">На занятие</a>
+                    </button>
                </div>
             </div>
          </li>
