--- a/шаблон — направления-дошкольникам - подготовка к школе.html
+++ b/шаблон — направления-дошкольникам - подготовка к школе.html
@@ -345,8 +345,8 @@
 
                     <div class="banner-content" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 600">
                         <div class="uk-padding uk-margin-top napravlenia_textblock_one">Ньютоника - 
-                            подготовка детей к школе к школе, не выходя из дома</div>
-                        <div class="h1-banner-text uk-padding uk-text-justify napravlenia_textblock ">
+                            подготовка детей к школе, не выходя из дома</div>
+                        <div class="h1-banner-text uk-padding napravlenia_textblock ">
                             На индивидуальных занятиях малыш освоит азы счета, чтения и письма, разовьет память,
                             внимание, научится концентрироваться при выполнении заданий, узнает о школьных требованиях.
                             <br>
@@ -375,7 +375,7 @@
 
                     <div class="banner-content" uk-scrollspy="cls: uk-animation-slide-bottom; delay: 600">
                         <div class="uk-padding uk-margin-top napravlenia_textblock_one"></div>
-                        <div class="h1-banner-text uk-padding uk-text-justify napravlenia_textblock ">
+                        <div class="h1-banner-text uk-padding napravlenia_textblock ">
                             Индивидуальные программы занятий, подготовленные опытными преподавателями из школы
                             Ньютоника, помогут зародить в детях жажду знаний и научат не только правильно добывать
                             информацию, но и использовать её в повседневной жизни.
