--- a/шаблон — личный кабинет — личный кабинет общая страница.html
+++ b/шаблон — личный кабинет — личный кабинет общая страница.html
@@ -203,11 +203,7 @@
                                 <div class="card-lk_title">Занятие от 04.05.23 10:02
                                     <div>
                                         <div class="star-wrapper">
-                                            <a href="#" class="fas fa-star s1"></a>
-                                            <a href="#" class="fas fa-star s2"></a>
-                                            <a href="#" class="fas fa-star s3"></a>
-                                            <a href="#" class="fas fa-star s4"></a>
-                                            <a href="#" class="fas fa-star s5"></a>
+                                            Моя оценка: <span class="rating1"></span>
                                         </div>
                                         <script src="https://kit.fontawesome.com/5ea815c1d0.js"></script>
 
